src/parser.c
#include "heluna/parser.h"
#include <stdarg.h>
#include <stdlib.h>
#include <string.h>
#include <stdio.h>
#include <ctype.h>

/* ── Helpers ─────────────────────────────────────────────── */

static void error(Parser *p, SrcLoc loc, const char *fmt, ...) {
    if (p->had_error) return;
    p->had_error = 1;
    va_list ap;
    va_start(ap, fmt);
    p->error.kind = HELUNA_ERR_SYNTAX;
    p->error.loc = loc;
    vsnprintf(p->error.message, sizeof(p->error.message), fmt, ap);
    va_end(ap);
}

static void skip_comments(Parser *p) {
    while (p->next.kind == TOK_COMMENT) {
        p->next = lexer_next(p->lex);
    }
}

static void advance(Parser *p) {
    p->current = p->next;
    p->next = lexer_next(p->lex);
    skip_comments(p);
}

static TokenKind peek(Parser *p) {
    return p->next.kind;
}

static int match(Parser *p, TokenKind kind) {
    if (peek(p) == kind) {
        advance(p);
        return 1;
    }
    return 0;
}

static void expect(Parser *p, TokenKind kind) {
    if (!match(p, kind)) {
        error(p, p->next.loc, "expected %s, got %s",
              token_kind_name(kind), token_kind_name(p->next.kind));
    }
}

static const char *token_text(Parser *p, Token tok) {
    return arena_strndup(p->arena, tok.start, (size_t)tok.length);
}

/* Extract identifier name from current token */
static const char *ident_name(Parser *p) {
    return token_text(p, p->current);
}

/* Extract input ref name (strip leading $) */
static const char *input_ref_name(Parser *p) {
    return arena_strndup(p->arena, p->current.start + 1,
                         (size_t)(p->current.length - 1));
}

/* Check if a token kind can serve as a name (identifier or keyword) */
static int is_name_token(TokenKind k) {
    if (k == TOK_IDENT) return 1;
    /* All keywords are valid as field/label names in context */
    switch (k) {
    case TOK_CONTRACT: case TOK_USES: case TOK_TAGS: case TOK_TAGGED:
    case TOK_SANITIZERS: case TOK_STRIPS: case TOK_INPUT: case TOK_OUTPUT:
    case TOK_RULES: case TOK_FORBID: case TOK_REQUIRE: case TOK_REJECT:
    case TOK_TESTS: case TOK_TEST: case TOK_GIVEN: case TOK_EXPECT:
    case TOK_AS: case TOK_STRING_TYPE: case TOK_INTEGER_TYPE:
    case TOK_FLOAT_TYPE: case TOK_BOOLEAN_TYPE: case TOK_MAYBE:
    case TOK_LIST: case TOK_OF: case TOK_RECORD:
    case TOK_DEFINE: case TOK_WITH: case TOK_LET: case TOK_BE:
    case TOK_RESULT: case TOK_IF: case TOK_THEN: case TOK_ELSE:
    case TOK_END: case TOK_MATCH: case TOK_WHEN: case TOK_BETWEEN:
    case TOK_AND: case TOK_OR: case TOK_NOT: case TOK_IN:
    case TOK_THROUGH: case TOK_MAP: case TOK_DO: case TOK_FILTER:
    case TOK_WHERE: case TOK_SOURCE: case TOK_SOURCES: case TOK_KEYED_BY:
    case TOK_RETURNS: case TOK_LOOKUP:
        return 1;
    default:
        return 0;
    }
}

/* Expect an identifier or keyword-as-name */
static void expect_name(Parser *p) {
    if (is_name_token(peek(p))) {
        advance(p);
    } else {
        error(p, p->next.loc, "expected identifier, got %s",
              token_kind_name(p->next.kind));
    }
}

/* ── Allocators ──────────────────────────────────────────── */

static AstExpr *new_expr(Parser *p, AstExprKind kind, SrcLoc loc) {
    AstExpr *e = arena_calloc(p->arena, sizeof(AstExpr));
    e->kind = kind;
    e->loc = loc;
    return e;
}

static AstPattern *new_pattern(Parser *p, AstPatternKind kind, SrcLoc loc) {
    AstPattern *pat = arena_calloc(p->arena, sizeof(AstPattern));
    pat->kind = kind;
    pat->loc = loc;
    return pat;
}

static AstType *new_type(Parser *p, AstTypeKind kind, SrcLoc loc) {
    AstType *t = arena_calloc(p->arena, sizeof(AstType));
    t->kind = kind;
    t->loc = loc;
    return t;
}

/* ── Forward declarations ────────────────────────────────── */

static AstExpr    *parse_expression(Parser *p);
static AstExpr    *parse_or_expr(Parser *p);
static AstExpr    *parse_and_expr(Parser *p);
static AstExpr    *parse_not_expr(Parser *p);
static AstExpr    *parse_through_expr(Parser *p);
static AstExpr    *parse_compare_expr(Parser *p);
static AstExpr    *parse_arith_expr(Parser *p);
static AstExpr    *parse_term(Parser *p);
static AstExpr    *parse_unary(Parser *p);
static AstExpr    *parse_atom(Parser *p);
static AstPattern *parse_pattern(Parser *p);
static AstType    *parse_type(Parser *p);

/* ── Accessor chain ──────────────────────────────────────── */

static AstExpr *parse_accessors(Parser *p, AstExpr *base) {
    while (peek(p) == TOK_DOT) {
        advance(p); /* consume '.' */
        SrcLoc loc = p->current.loc;
        if (peek(p) == TOK_IDENT || peek(p) == TOK_INTEGER) {
            advance(p);
            const char *field = token_text(p, p->current);
            AstExpr *acc = new_expr(p, EXPR_ACCESS, loc);
            acc->as.access.object = base;
            acc->as.access.field = field;
            base = acc;
        } else {
            /* Some keywords can appear as field names after dot */
            TokenKind k = peek(p);
            if (k == TOK_INPUT || k == TOK_OUTPUT || k == TOK_LIST ||
                k == TOK_RECORD || k == TOK_MATCH || k == TOK_FILTER ||
                k == TOK_MAP || k == TOK_STRING_TYPE || k == TOK_INTEGER_TYPE ||
                k == TOK_FLOAT_TYPE || k == TOK_BOOLEAN_TYPE || k == TOK_MAYBE ||
                k == TOK_TRUE || k == TOK_FALSE || k == TOK_NOTHING ||
                k == TOK_TAGS || k == TOK_RULES || k == TOK_TESTS ||
                k == TOK_TEST || k == TOK_GIVEN || k == TOK_EXPECT ||
                k == TOK_RESULT || k == TOK_LET || k == TOK_BE ||
                k == TOK_DO || k == TOK_END || k == TOK_DEFINE ||
                k == TOK_WITH || k == TOK_USES || k == TOK_AS ||
                k == TOK_OF || k == TOK_WHEN || k == TOK_THEN ||
                k == TOK_ELSE || k == TOK_IF || k == TOK_AND ||
                k == TOK_OR || k == TOK_NOT || k == TOK_IN ||
                k == TOK_WHERE || k == TOK_THROUGH || k == TOK_BETWEEN ||
                k == TOK_FORBID || k == TOK_REQUIRE || k == TOK_REJECT ||
                k == TOK_TAGGED || k == TOK_SANITIZERS || k == TOK_STRIPS ||
                k == TOK_CONTRACT || k == TOK_SOURCE || k == TOK_SOURCES ||
                k == TOK_KEYED_BY || k == TOK_RETURNS || k == TOK_LOOKUP) {
                advance(p);
                const char *field = token_text(p, p->current);
                AstExpr *acc = new_expr(p, EXPR_ACCESS, loc);
                acc->as.access.object = base;
                acc->as.access.field = field;
                base = acc;
            } else {
                error(p, p->next.loc, "expected field name after '.'");
                break;
            }
        }
    }
    return base;
}

/* ── Atom parsing ────────────────────────────────────────── */

static long long parse_integer_value(const char *start, int length) {
    char buf[64];
    int len = length < 63 ? length : 63;
    memcpy(buf, start, (size_t)len);
    buf[len] = '\0';
    return strtoll(buf, NULL, 10);
}

static double parse_float_value(const char *start, int length) {
    char buf[128];
    int len = length < 127 ? length : 127;
    memcpy(buf, start, (size_t)len);
    buf[len] = '\0';
    return strtod(buf, NULL);
}

static AstExpr *parse_record_literal(Parser *p) {
    SrcLoc loc = p->current.loc; /* on '{' */
    AstExpr *rec = new_expr(p, EXPR_RECORD, loc);
    rec->as.record.labels = NULL;

    if (peek(p) == TOK_RBRACE) {
        advance(p);
        return rec;
    }

    AstLabel *head = NULL;
    AstLabel **tail = &head;

    do {
        expect_name(p);
        if (p->had_error) return rec;
        SrcLoc label_loc = p->current.loc;
        const char *name = ident_name(p);

        expect(p, TOK_COLON);
        if (p->had_error) return rec;

        AstExpr *value = parse_expression(p);

        AstLabel *label = arena_calloc(p->arena, sizeof(AstLabel));
        label->name = name;
        label->value = value;
        label->loc = label_loc;
        *tail = label;
        tail = &label->next;
    } while (match(p, TOK_COMMA));

    expect(p, TOK_RBRACE);
    rec->as.record.labels = head;
    return rec;
}

static AstExpr *parse_list_literal(Parser *p) {
    SrcLoc loc = p->current.loc; /* on '[' */
    AstExpr *list = new_expr(p, EXPR_LIST, loc);
    list->as.list.elements = NULL;

    if (peek(p) == TOK_RBRACKET) {
        advance(p);
        return list;
    }

    AstExpr *head = NULL;
    AstExpr **tail = &head;

    do {
        AstExpr *elem = parse_expression(p);
        *tail = elem;
        tail = &elem->next;
    } while (match(p, TOK_COMMA));

    expect(p, TOK_RBRACKET);
    list->as.list.elements = head;
    return list;
}

/* Parse a function call: name '(' record-literal ')'
 * Called when we've already consumed the identifier and see '(' next. */
static AstExpr *parse_call(Parser *p, const char *name, SrcLoc loc) {
    advance(p); /* consume '(' */
    /* The argument is a record literal (with braces) */
    expect(p, TOK_LBRACE);
    if (p->had_error) return new_expr(p, EXPR_NOTHING, loc);
    AstExpr *arg = parse_record_literal(p);
    expect(p, TOK_RPAREN);

    AstExpr *call = new_expr(p, EXPR_CALL, loc);
    call->as.call.name = name;
    call->as.call.arg = arg;
    return call;
}

static AstExpr *parse_atom(Parser *p) {
    if (p->had_error) return new_expr(p, EXPR_NOTHING, p->next.loc);

    TokenKind k = peek(p);
    SrcLoc loc = p->next.loc;

    switch (k) {
    case TOK_INTEGER: {
        advance(p);
        AstExpr *e = new_expr(p, EXPR_INTEGER, loc);
        e->as.integer_val = parse_integer_value(p->current.start, p->current.length);
        return parse_accessors(p, e);
    }
    case TOK_FLOAT: {
        advance(p);
        AstExpr *e = new_expr(p, EXPR_FLOAT, loc);
        e->as.float_val = parse_float_value(p->current.start, p->current.length);
        return parse_accessors(p, e);
    }
    case TOK_STRING: {
        advance(p);
        AstExpr *e = new_expr(p, EXPR_STRING, loc);
        e->as.string_val.value = p->current.start;
        e->as.string_val.length = p->current.length;
        return parse_accessors(p, e);
    }
    case TOK_TRUE: {
        advance(p);
        return parse_accessors(p, new_expr(p, EXPR_TRUE, loc));
    }
    case TOK_FALSE: {
        advance(p);
        return parse_accessors(p, new_expr(p, EXPR_FALSE, loc));
    }
    case TOK_NOTHING: {
        advance(p);
        return parse_accessors(p, new_expr(p, EXPR_NOTHING, loc));
    }
    case TOK_IDENT: {
        advance(p);
        const char *name = ident_name(p);
        /* Check for function call: ident '(' */
        if (peek(p) == TOK_LPAREN) {
            AstExpr *call = parse_call(p, name, loc);
            return parse_accessors(p, call);
        }
        AstExpr *e = new_expr(p, EXPR_IDENT, loc);
        e->as.ident.name = name;
        return parse_accessors(p, e);
    }
    case TOK_INPUT_REF: {
        advance(p);
        AstExpr *e = new_expr(p, EXPR_INPUT_REF, loc);
        e->as.input_ref.name = input_ref_name(p);
        return parse_accessors(p, e);
    }
    case TOK_INPUT:
    case TOK_OUTPUT: {
        advance(p);
        const char *name = ident_name(p);
        if (peek(p) == TOK_LPAREN) {
            AstExpr *call = parse_call(p, name, loc);
            return parse_accessors(p, call);
        }
        AstExpr *e = new_expr(p, EXPR_IDENT, loc);
        e->as.ident.name = name;
        return parse_accessors(p, e);
    }
    case TOK_LBRACE: {
        advance(p);
        AstExpr *rec = parse_record_literal(p);
        return parse_accessors(p, rec);
    }
    case TOK_LBRACKET: {
        advance(p);
        AstExpr *list = parse_list_literal(p);
        return parse_accessors(p, list);
    }
    case TOK_LPAREN: {
        advance(p);
        AstExpr *inner = parse_expression(p);
        expect(p, TOK_RPAREN);
        AstExpr *paren = new_expr(p, EXPR_PAREN, loc);
        paren->as.paren.inner = inner;
        return parse_accessors(p, paren);
    }
    default:
        error(p, loc, "expected expression, got %s", token_kind_name(k));
        return new_expr(p, EXPR_NOTHING, loc);
    }
}

/* ── Unary ───────────────────────────────────────────────── */

static AstExpr *parse_unary(Parser *p) {
    if (peek(p) == TOK_MINUS) {
        SrcLoc loc = p->next.loc;
        advance(p);
        AstExpr *operand = parse_unary(p);
        AstExpr *e = new_expr(p, EXPR_UNARY_NEG, loc);
        e->as.unary.operand = operand;
        return e;
    }
    return parse_atom(p);
}

/* ── Term (* / %) ────────────────────────────────────────── */

static AstExpr *parse_term(Parser *p) {
    AstExpr *left = parse_unary(p);

    while (peek(p) == TOK_STAR || peek(p) == TOK_SLASH || peek(p) == TOK_PERCENT) {
        SrcLoc loc = p->next.loc;
        AstBinOp op;
        if (peek(p) == TOK_STAR)    op = BIN_MUL;
        else if (peek(p) == TOK_SLASH)   op = BIN_DIV;
        else                              op = BIN_MOD;
        advance(p);

        AstExpr *right = parse_unary(p);
        AstExpr *bin = new_expr(p, EXPR_BINARY, loc);
        bin->as.binary.op = op;
        bin->as.binary.left = left;
        bin->as.binary.right = right;
        left = bin;
    }
    return left;
}

/* ── ArithExpr (+ -) ────────────────────────────────────── */

static AstExpr *parse_arith_expr(Parser *p) {
    AstExpr *left = parse_term(p);

    while (peek(p) == TOK_PLUS || peek(p) == TOK_MINUS) {
        SrcLoc loc = p->next.loc;
        AstBinOp op = (peek(p) == TOK_PLUS) ? BIN_ADD : BIN_SUB;
        advance(p);

        AstExpr *right = parse_term(p);
        AstExpr *bin = new_expr(p, EXPR_BINARY, loc);
        bin->as.binary.op = op;
        bin->as.binary.left = left;
        bin->as.binary.right = right;
        left = bin;
    }
    return left;
}

/* ── CompareExpr ─────────────────────────────────────────── */

static AstExpr *parse_compare_expr(Parser *p) {
    AstExpr *left = parse_arith_expr(p);

    TokenKind k = peek(p);
    if (k == TOK_EQ || k == TOK_NEQ || k == TOK_LT || k == TOK_GT ||
        k == TOK_LTE || k == TOK_GTE) {
        SrcLoc loc = p->next.loc;
        AstBinOp op;
        switch (k) {
        case TOK_EQ:  op = BIN_EQ;  break;
        case TOK_NEQ: op = BIN_NEQ; break;
        case TOK_LT:  op = BIN_LT;  break;
        case TOK_GT:  op = BIN_GT;  break;
        case TOK_LTE: op = BIN_LTE; break;
        case TOK_GTE: op = BIN_GTE; break;
        default:      op = BIN_EQ;  break;
        }
        advance(p);
        AstExpr *right = parse_arith_expr(p);
        AstExpr *bin = new_expr(p, EXPR_BINARY, loc);
        bin->as.binary.op = op;
        bin->as.binary.left = left;
        bin->as.binary.right = right;
        return bin;
    }
    return left;
}

/* ── Boolean operators (integrated into precedence chain) ── */

static AstExpr *parse_not_expr(Parser *p) {
    if (peek(p) == TOK_NOT) {
        SrcLoc loc = p->next.loc;
        advance(p);
        AstExpr *operand = parse_not_expr(p);
        AstExpr *e = new_expr(p, EXPR_NOT, loc);
        e->as.not_expr.operand = operand;
        return e;
    }
    return parse_compare_expr(p);
}

static AstExpr *parse_and_expr(Parser *p) {
    AstExpr *left = parse_not_expr(p);

    while (peek(p) == TOK_AND) {
        SrcLoc loc = p->next.loc;
        advance(p);
        AstExpr *right = parse_not_expr(p);
        AstExpr *bin = new_expr(p, EXPR_BINARY, loc);
        bin->as.binary.op = BIN_AND;
        bin->as.binary.left = left;
        bin->as.binary.right = right;
        left = bin;
    }
    return left;
}

static AstExpr *parse_or_expr(Parser *p) {
    AstExpr *left = parse_and_expr(p);

    while (peek(p) == TOK_OR) {
        SrcLoc loc = p->next.loc;
        advance(p);
        AstExpr *right = parse_and_expr(p);
        AstExpr *bin = new_expr(p, EXPR_BINARY, loc);
        bin->as.binary.op = BIN_OR;
        bin->as.binary.left = left;
        bin->as.binary.right = right;
        left = bin;
    }
    return left;
}

/* BoolExpr contexts (if, filter, require, guards) use parse_or_expr */
static AstExpr *parse_bool_expr(Parser *p) {
    return parse_or_expr(p);
}

/* ── ThroughExpr ─────────────────────────────────────────── */

static AstExpr *parse_filter_expr(Parser *p);
static AstExpr *parse_map_expr(Parser *p);

static AstExpr *parse_through_expr(Parser *p) {
    AstExpr *left = parse_or_expr(p);

    while (peek(p) == TOK_THROUGH) {
        SrcLoc loc = p->next.loc;
        advance(p); /* consume 'through' */

        AstExpr *right;
        if (peek(p) == TOK_FILTER) {
            right = parse_filter_expr(p);
        } else if (peek(p) == TOK_MAP) {
            right = parse_map_expr(p);
        } else {
            /* Must be a function call: ident '(' ... ')' */
            expect(p, TOK_IDENT);
            if (p->had_error) return left;
            const char *name = ident_name(p);
            SrcLoc call_loc = p->current.loc;
            if (peek(p) == TOK_LPAREN) {
                right = parse_call(p, name, call_loc);
            } else {
                /* Just an identifier reference — shouldn't happen per grammar,
                   but handle it gracefully */
                right = new_expr(p, EXPR_IDENT, call_loc);
                right->as.ident.name = name;
            }
        }

        AstExpr *through = new_expr(p, EXPR_THROUGH, loc);
        through->as.through.left = left;
        through->as.through.right = right;
        left = through;
    }
    return left;
}

/* ── If expression ───────────────────────────────────────── */

static AstExpr *parse_if_expr(Parser *p) {
    SrcLoc loc = p->current.loc; /* on 'if' */
    AstExpr *node = new_expr(p, EXPR_IF, loc);

    AstIfBranch *head = NULL;
    AstIfBranch **tail = &head;

    /* First branch: if condition then body */
    AstExpr *cond = parse_bool_expr(p);
    expect(p, TOK_THEN);
    AstExpr *body = parse_expression(p);

    AstIfBranch *branch = arena_calloc(p->arena, sizeof(AstIfBranch));
    branch->condition = cond;
    branch->body = body;
    branch->loc = loc;
    *tail = branch;
    tail = &branch->next;

    /* else if ... / else ... */
    int has_else = 0;
    while (peek(p) == TOK_ELSE) {
        SrcLoc else_loc = p->next.loc;
        advance(p); /* consume 'else' */

        if (peek(p) == TOK_IF) {
            advance(p); /* consume 'if' */
            AstExpr *elif_cond = parse_bool_expr(p);
            expect(p, TOK_THEN);
            AstExpr *elif_body = parse_expression(p);

            AstIfBranch *elif = arena_calloc(p->arena, sizeof(AstIfBranch));
            elif->condition = elif_cond;
            elif->body = elif_body;
            elif->loc = else_loc;
            *tail = elif;
            tail = &elif->next;
        } else {
            /* final else */
            AstExpr *else_body = parse_expression(p);
            AstIfBranch *else_br = arena_calloc(p->arena, sizeof(AstIfBranch));
            else_br->condition = NULL;
            else_br->body = else_body;
            else_br->loc = else_loc;
            *tail = else_br;
            tail = &else_br->next;
            has_else = 1;
            break;
        }
    }

    if (!has_else) {
        error(p, loc, "if expression requires an else branch");
    }

    expect(p, TOK_END);
    node->as.if_expr.branches = head;
    return node;
}

/* ── Pattern parsing ─────────────────────────────────────── */

static AstPattern *parse_pattern(Parser *p) {
    SrcLoc loc = p->next.loc;
    TokenKind k = peek(p);

    switch (k) {
    case TOK_NOTHING: {
        advance(p);
        AstPattern *pat = new_pattern(p, PAT_LITERAL, loc);
        pat->as.literal.value = new_expr(p, EXPR_NOTHING, loc);
        return pat;
    }
    case TOK_TRUE: {
        advance(p);
        AstPattern *pat = new_pattern(p, PAT_LITERAL, loc);
        pat->as.literal.value = new_expr(p, EXPR_TRUE, loc);
        return pat;
    }
    case TOK_FALSE: {
        advance(p);
        AstPattern *pat = new_pattern(p, PAT_LITERAL, loc);
        pat->as.literal.value = new_expr(p, EXPR_FALSE, loc);
        return pat;
    }
    case TOK_INTEGER: {
        advance(p);
        AstPattern *pat = new_pattern(p, PAT_LITERAL, loc);
        AstExpr *val = new_expr(p, EXPR_INTEGER, loc);
        val->as.integer_val = parse_integer_value(p->current.start, p->current.length);
        pat->as.literal.value = val;
        return pat;
    }
    case TOK_FLOAT: {
        advance(p);
        AstPattern *pat = new_pattern(p, PAT_LITERAL, loc);
        AstExpr *val = new_expr(p, EXPR_FLOAT, loc);
        val->as.float_val = parse_float_value(p->current.start, p->current.length);
        pat->as.literal.value = val;
        return pat;
    }
    case TOK_STRING: {
        advance(p);
        AstPattern *pat = new_pattern(p, PAT_LITERAL, loc);
        AstExpr *val = new_expr(p, EXPR_STRING, loc);
        val->as.string_val.value = p->current.start;
        val->as.string_val.length = p->current.length;
        pat->as.literal.value = val;
        return pat;
    }
    case TOK_MINUS: {
        /* Negative number literal in pattern */
        advance(p); /* consume '-' */
        if (peek(p) == TOK_INTEGER) {
            advance(p);
            AstPattern *pat = new_pattern(p, PAT_LITERAL, loc);
            AstExpr *val = new_expr(p, EXPR_INTEGER, loc);
            val->as.integer_val = -parse_integer_value(p->current.start, p->current.length);
            pat->as.literal.value = val;
            return pat;
        } else if (peek(p) == TOK_FLOAT) {
            advance(p);
            AstPattern *pat = new_pattern(p, PAT_LITERAL, loc);
            AstExpr *val = new_expr(p, EXPR_FLOAT, loc);
            val->as.float_val = -parse_float_value(p->current.start, p->current.length);
            pat->as.literal.value = val;
            return pat;
        }
        error(p, loc, "expected number after '-' in pattern");
        return new_pattern(p, PAT_WILDCARD, loc);
    }
    case TOK_UNDERSCORE: {
        advance(p);
        return new_pattern(p, PAT_WILDCARD, loc);
    }
    case TOK_BETWEEN: {
        advance(p); /* consume 'between' */
        /* Use parse_compare_expr to avoid consuming 'and' as boolean op */
        AstExpr *low = parse_compare_expr(p);
        expect(p, TOK_AND);
        AstExpr *high = parse_compare_expr(p);
        AstPattern *pat = new_pattern(p, PAT_RANGE, loc);
        pat->as.range.low = low;
        pat->as.range.high = high;
        return pat;
    }
    case TOK_LBRACKET: {
        advance(p); /* consume '[' */
        AstPattern *pat = new_pattern(p, PAT_LIST, loc);
        pat->as.list.elements = NULL;
        pat->as.list.rest_name = NULL;

        if (peek(p) == TOK_RBRACKET) {
            advance(p);
            return pat;
        }

        AstPatternElem *head = NULL;
        AstPatternElem **tail = &head;

        for (;;) {
            /* Check for ..rest */
            if (peek(p) == TOK_DOTDOT) {
                advance(p); /* consume '..' */
                if (peek(p) == TOK_IDENT) {
                    advance(p);
                    pat->as.list.rest_name = ident_name(p);
                } else {
                    pat->as.list.rest_name = "";
                }
                /* Might have trailing comma before ] */
                match(p, TOK_COMMA);
                break;
            }

            AstPattern *elem = parse_pattern(p);
            AstPatternElem *node = arena_calloc(p->arena, sizeof(AstPatternElem));
            node->pattern = elem;
            *tail = node;
            tail = &node->next;

            if (!match(p, TOK_COMMA)) break;

            /* Check if .. follows the comma */
            if (peek(p) == TOK_DOTDOT) {
                advance(p); /* consume '..' */
                if (peek(p) == TOK_IDENT) {
                    advance(p);
                    pat->as.list.rest_name = ident_name(p);
                } else {
                    pat->as.list.rest_name = "";
                }
                break;
            }
        }

        expect(p, TOK_RBRACKET);
        pat->as.list.elements = head;
        return pat;
    }
    case TOK_LBRACE: {
        advance(p); /* consume '{' */
        AstPattern *pat = new_pattern(p, PAT_RECORD, loc);

        AstFieldPattern *head = NULL;
        AstFieldPattern **tail = &head;

        if (peek(p) != TOK_RBRACE) {
            do {
                expect_name(p);
                if (p->had_error) break;
                SrcLoc floc = p->current.loc;
                const char *fname = ident_name(p);

                expect(p, TOK_COLON);
                if (p->had_error) break;

                AstPattern *fpat = parse_pattern(p);

                AstFieldPattern *fp = arena_calloc(p->arena, sizeof(AstFieldPattern));
                fp->name = fname;
                fp->pattern = fpat;
                fp->loc = floc;
                *tail = fp;
                tail = &fp->next;
            } while (match(p, TOK_COMMA));
        }

        expect(p, TOK_RBRACE);
        pat->as.record.fields = head;
        return pat;
    }
    case TOK_IDENT: {
        advance(p);
        AstPattern *pat = new_pattern(p, PAT_BINDING, loc);
        pat->as.binding.name = ident_name(p);
        return pat;
    }
    default:
        error(p, loc, "expected pattern, got %s", token_kind_name(k));
        return new_pattern(p, PAT_WILDCARD, loc);
    }
}

/* ── Match expression ────────────────────────────────────── */

static AstExpr *parse_match_expr(Parser *p) {
    SrcLoc loc = p->current.loc; /* on 'match' */
    AstExpr *subject = parse_expression(p);

    AstExpr *node = new_expr(p, EXPR_MATCH, loc);
    node->as.match.subject = subject;
    node->as.match.else_body = NULL;

    AstWhenClause *head = NULL;
    AstWhenClause **tail = &head;

    while (peek(p) == TOK_WHEN) {
        SrcLoc wloc = p->next.loc;
        advance(p); /* consume 'when' */

        AstPattern *pattern = parse_pattern(p);
        AstExpr *guard = NULL;

        /* Check for 'and' guard */
        if (peek(p) == TOK_AND) {
            advance(p);
            guard = parse_bool_expr(p);
        }

        expect(p, TOK_THEN);
        AstExpr *body = parse_expression(p);

        AstWhenClause *clause = arena_calloc(p->arena, sizeof(AstWhenClause));
        clause->pattern = pattern;
        clause->guard = guard;
        clause->body = body;
        clause->loc = wloc;
        *tail = clause;
        tail = &clause->next;
    }

    if (peek(p) == TOK_ELSE) {
        advance(p);
        node->as.match.else_body = parse_expression(p);
    }

    expect(p, TOK_END);
    node->as.match.clauses = head;
    return node;
}

/* ── Let expression ──────────────────────────────────────── */

static AstExpr *parse_let_expr(Parser *p) {
    SrcLoc loc = p->current.loc; /* on 'let' */

    expect(p, TOK_IDENT);
    if (p->had_error) return new_expr(p, EXPR_NOTHING, loc);
    const char *name = ident_name(p);

    expect(p, TOK_BE);
    if (p->had_error) return new_expr(p, EXPR_NOTHING, loc);
